namespace BaseNS
{
    public interface ISquare
    {
        Position Position { get; set; }
        Part SquarePart { get; set; }
    }
}