 @startuml
skinparam classAttributeIconSize 0
skinparam groupInheritance 1
namespace BaseNS {
    Position <.. ISquare
    Part <.. ISquare
    ListLevelData *--- Level
    ListStartingLevelData *-- Level
    
    class ListISquare extends List
    class ListISquare implements XmlSerializer
    class Goal implements ISquare
    class Player implements ISquare
    class Wall implements ISquare
    class Block implements ISquare
    note left on link
        Empty Constructors so that the XmlSerializer
        behaves correctly and doesn't throw
        a Parentless parameter constructor.
    endnote
    class Empty implements ISquare
    class Level implements ILevel
    class ListLevelData extends ListISquare
    class ListStartingLevelData extends ListISquare
    
    interface ILevel {
        CreateLevel(int width, int height) : void
        GetLevelWidth() : int
        GetLevelHeight() : int
        AddBlock(int gridX, int gridY) : void
        AddPlayer(int gridX, int gridY) : void
        AddWall(int gridX, int gridY) : void
        AddGoal(int gridX, int gridY) : void
        AddEmpty(int gridX, int gridY) : void
        AddBlockOnGoal(int gridX, int gridY) : void
        AddPlayerOnGoal(int gridX, int gridY) : void
        GetPartAtIndex(int gridX, int gridY) : Part
        SaveMe() : void
        CheckValid() : bool
    }
    
    interface ISquare {
        Position : Position { get; set; }
        SquarePart : Part { get; set; } 
    }
    
    enum Direction { 
        Up
        Down 
        Left
        Right 
    }
    
    enum Part {
        Wall
        Empty
        Player
        Goal
        Block
        BlockOnGoal
        PlayerOnGoal
    }
    
    class Position {
        +X : int { get; }
        +Y : int { get; }
        +Position(int x, int y) : void
    }
    
    class Wall {
        +Wall(Position position) : void
        +Wall() : void
        +Position : Position { get; set; }
        
    }
    
    class Goal {
        +Goal(Position position) : void
        +Goal() : void
        +Position : Position { get; set; }
        +SquarePart : Part { get; set; } 
        +Completed : boolean { get; set; }
        
    }
    
    class Player {
        +Player(Position playerPosition)
        +Player() : void
        +Position : Position { get; set; }
        +SquarePart : Part { get; set; } 
        +MoveCount : int { get; set; }
        +Goal : Goal { get; set; }
        +PrevPositions : List<Position> { get; }
    }
    
    class Block {
        +Block(Position blockPosition) : void
        +Block() : void
        +Position Position { get; set; }
        +Part SquarePart { get; set; }
        +Goal Goal { get; set; } = null;
    }
    
    class Empty {
        +Empty(Position position) : void
        +Empty() : void
        +Position : Position { get; set; }
        +SquarePart : Part { get; set; } 
    }
    
    class List<ISquare> {}
    
    class ListISquare {
        +GetSchema() : XmlSchema
        +WriteXml(XmlWriter writer) : void
        +{abstract} ReadXml(XmlReader reader) : void
    }
    
    note left of ListISquare::ReadXml
        This method is a virtual method.
    endnote
    
    class ListLevelData {
        +ReadXml(XmlReader reader) : void
    }
    
    class ListStartingLevelData {
        +ReadXml(XmlReader reader) : void
    }
    
    class Level {
        +Width : int { get; }
        +Height : int { get; }
        +LevelData : ListLevelData { get; }
        +StartingLevelData : ListStartingLevelData { get; }
        +CreateLevel(int width, int height) : void
        +GetLevelWidth() : int
        +GetLevelHeight() : int
        +AddBlock(int gridX, int gridY) : void
        +AddPlayer(int gridX, int gridY) : void
        +AddWall(int gridX, int gridY) : void
        +AddGoal(int gridX, int gridY) : void
        +AddEmpty(int gridX, int gridY) : void
        +AddBlockOnGoal(int gridX, int gridY) : void
        +AddPlayerOnGoal(int gridX, int gridY) : void
        +GetPartAtIndex(int gridX, int gridY) : Part
        +GetGoalAtPos(int gridX, int gridY) : Goal
        +GetISquareAtIndex(int gridX, int gridY) : ISquare
        +GetTotalGoals() : int
        +GetCompletedGoals() : boolean
        +GetPlayer() : Player
        +SaveMe() : void
        +CheckValid() : bool
        -GetIndexForISquare(ISquare square) : int
        -LevelDataConvertor(ListISquare levelData) : ListLevelData
        -StartingLevelDataConvertor(ListISquare levelData)) : ListStartingLevelData
    }
}

namespace GameNS #DDDDDD {
    IGame <|.. Game
    LevelStorage *-- Game
    BaseNS.Level *- LevelStorage
    BaseNS.Direction <. Game
    BaseNS.Position <. Game
    BaseNS.ISquare <. Game
    BaseNS.Block <. Game
    BaseNS.Player <. Game
    
    interface IGame {
        +Move(Direction moveDirection) : void
        +GetMoveCount() : int
        +Undo() : void
        +Restart() : void
        +IsFinished() : bool
        +Load(string newLevel) : void
    }
    
    class LevelStorage {
        -_allLevels : List<Level>
        +CurrentLevel : Level
        +AddLevel(Level level) : void
        +LevelCount() : int
        +SaveCurrentLevel() : void
        +LoadLevel(string levelName) : void
        +CheckValid() : bool
        
    }
    
    class Game {
        +LevelStorage : LevelStorage { get; }
        +Game(ILevel levelHandler) : void
        +Move(Direction moveDirection) : void
        +GetMoveCount() : int
        +Undo() : void
        +Restart() : void
        +IsFinished() : bool
        +Load(string newLevel) : void
        -AllowMove(Position checkPosition) : bool
        -UpdateBlockInLevel(Block block, ISquare squareNextToSquare, int squareIndex, int indexForNewBlock, Position blockNewPos, bool addGoal) : void
        -UpdatePlayerInLevel(Player player, int playerIndex, int squareIndex, Position newPos) : void
        -ChangeObjectAtIndex(ISquare square, int index) : void
        -MovementAlgorithm(Position playerNewPos, Position squareNewPos, Player player) : void
    }
}
@enduml